--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Pink</title>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700&display=swap&subset=cyrillic" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<header class="header">
