--- a/source/index.html
+++ b/source/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 	<meta charset="utf-8">
 	<title>Pink</title>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700&display=swap&subset=cyrillic" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700&display=swap&subset=cyrillic"
+		rel="stylesheet">
 
 	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 	<header class="header">
 		<div class="header__wrapper">
 			<a class="header__logo" href="index.html">
-				<img class="header__logo-image" src="img/logo-pink-white-mobile.svg"  width="75" height="22" alt="Логотип приложения «Pink»">
+				<img class="header__logo-image" src="img/logo-pink-white-mobile.svg" width="75" height="22"
+					alt="Логотип приложения «Pink»">
 			</a>
 			<nav class="main-nav">
 				<div class="main-nav__wrapper">
@@ -20,7 +24,7 @@
 					</div>
 					<ul class="main-nav__list site-list">
 						<li class="site-list__item">
-							<a>Главная!!!!!!!!!!!!!!!!!!!!!!!!!!</a>
+							<a>Главная</a>
 						</li>
 						<li class="site-list__item">
 							<a href="">Фотографии</a>
@@ -37,7 +41,7 @@
 		</div>
 	</header>
 
-<!-- 	<main class="page-main">
+	<!-- 	<main class="page-main">
 		<h1 class="visually-hidden">Приложение «Pink»</h1>
 
 		<section class="download">
@@ -190,4 +194,5 @@
 
 	<!-- <script type="text/javascript"></script> -->
 </body>
+
 </html>
